fixed the fixjars test, only if there are any failed info it will be written